feat(auth): Logica de autenticacion terminada
